syntax = "proto3";

package posts;

service Posts {
    rpc GetPost (GetPostRequest) returns (GetPostResponse);
    rpc GetPosts (GetPostsRequest) returns (GetPostsResponse);
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
    rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
}

// -------------- COMMON --------------

message Post {
    int64 id = 1;
    int64 user_id = 2;
    string title = 3;
    string description = 4;
    int64 created_at = 5;
}

// --------------- Messages ---------------

message GetPostRequest {
    int64 id = 1;
}

message GetPostResponse {
    Post post = 1;
}

// ------------------------------

message GetPostsRequest {}

message GetPostsResponse {
    repeated Post posts = 1;
}

// ------------------------------

message CreatePostRequest {
    int64 user_id = 1;
    string title = 2;
    string description = 3;
}

message CreatePostResponse {
    Post post = 1;
}

// ------------------------------

message UpdatePostRequest {
    string title = 3;
    string description = 4;
}

message UpdatePostResponse {
    Post post = 1;
}

// ------------------------------

message DeletePostRequest {
    int64 id = 1;
}

message DeletePostResponse {
    Post post = 1;
}